Modules->Manage Modules alignment fixation Modules->Manage Modules->Unregistered->Register Button Modules->Manage Modules->RegisteredTab background of Panel Table Modules->Manage Modules->UnregisteredTab background of Panel Table Module->Manage Modules Heading Image fixing Module->Nav Tabs style Fixing

--- a/interface/themes/bootstrap/sass/style_bootstrap.scss
+++ b/interface/themes/bootstrap/sass/style_bootstrap.scss
@@ -1769,3 +1769,17 @@ tr.head {
 tr.search.no-bg input {
     margin-bottom: 15px;
 }
+.moduleInstallerPage .activate{
+    width: auto !important;
+}
+.moduleInstallerPage .current.divMenu{
+    @extend .nav-pills;
+}
+.moduleInstallerPage table.imagetable td, 
+.moduleInstallerPage table.imagetable th,
+.moduleInstallerPage div.installer{
+    background: #fff !important;
+}
+.moduleInstallerPage h1 img{
+    display: none;
+}
